# DWCTGenerativeSoundStudio

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LAUNCH_EDMG_STUDIO_GUI.bat  MANIFEST.txt  MODEL_MANAGER.md  README.md  README_STUDIO.md  RELEASE.md  RUN_ME.bat  TESTING_QUICKSTART.md  bootstrap_all.py  deploy.py  install.ps1  installer_gui.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt  run_me.sh  setup.py  sitecustomize.py
config/: __init__.py  config_system.py
deforum_music/: __init__.py
deployment/aws_batch/: Dockerfile  README.md  job_definition.json  worker.py
desktop/electron/: README.md
docs/: AI_PROVIDERS.md  AUTO_INSTALL.md  GUI_INSTALLER.md  architecture.md
docs/adr/: ADR-0000-template.md  ADR-0001-api-envelope.md
enhanced_deforum_music_generator/: __init__.py
integrations/: __init__.py  a1111_connector.py
juce_example/src/: main.cpp
packaging/windows/: README.md  build_all.ps1  get_ffmpeg.ps1
scripts/: edmg_installer.py  run_ai_service.py  run_api.py  smoke_check.py  studio_proxy_workflow_smoke.py
src/deforum_music/: __init__.py
src/enhanced_deforum_music_generator/: __init__.py
studio/edmg-studio/python_backend/: README.md  backend_entry.py  comfyui_nodes.example.json  pyinstaller.spec  pyproject.toml  requirements-directml.txt  requirements-internal.txt
studio/edmg-studio/python_backend/config/: __init__.py
studio/edmg-studio/python_backend/core/: __init__.py  audio_analyzer.py  nlp_processor.py  scheduler.py
studio/edmg-studio/python_backend/deforum_music/: __main__.py
studio/edmg-studio/python_backend/edmg/: __init__.py  __main__.py
studio/edmg-studio/python_backend/edmg_ai_service/: app.py  asr.py  audio.py  cli.py  config.py  provider_factory.py  schemas.py
studio/edmg-studio/python_backend/edmg_ai_service/providers/: base.py  fallback.py  ollama.py  openai_compat.py
studio/edmg-studio/python_backend/edmg_studio_backend/: app.py  cli.py  config.py  errors.py  schemas.py
studio/edmg-studio/python_backend/edmg_studio_backend/integrations/: __init__.py  aws.py  comfyui.py  comfyui_pool.py  lightning.py
studio/edmg-studio/python_backend/edmg_studio_backend/services/: ai_client.py  compositor.py  edmg_core.py  ffmpeg.py  internal_video.py  model_catalog.py  model_manager.py  secrets.py  setup_wizard.py  worker_manager.py
studio/edmg-studio/python_backend/edmg_studio_backend/store/: jobs.py  projects.py
studio/edmg-studio/python_backend/edmg_studio_backend/utils/: path.py
studio/edmg-studio/python_backend/enhanced_deforum_music_generator/: __init__.py  __main__.py  config_system_complete.py  multitrack.py  preview_generator.py  style_transfer.py
studio/edmg-studio/python_backend/enhanced_deforum_music_generator/config/: config_system.py
studio/edmg-studio/python_backend/enhanced_deforum_music_generator/interface/: __init__.py  gradio_interface.py
studio/edmg-studio/python_backend/enhanced_deforum_music_generator/tests/: conftest.py
studio/edmg-studio/python_backend/integrations/: __init__.py
studio/edmg-studio/python_backend/src/api/: main.py
tests/: conftest.py  test_api.py  test_deforum_generator.py  test_multitrack.py  test_preview_generator.py  test_selfcheck_script.py  test_studio_proxy_fallback.py  test_studio_render_tiers.py  test_studio_workflow_smoke.py  test_style_transfer.py
tools/: launcher_gui.py  start_studio_safe.bat  ui_preflight.bat
utils/: __init__.py
(+45 files in other folders)
