[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-deforum-music-generator"
version = "0.1.0"
description = "Enhanced Deforum Music Generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gradio>=4.44.0",
  "numpy>=1.23.0",
  "scipy>=1.10.0",
  "requests>=2.25.0",
  "PyYAML>=6.0.0",
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "transformers>=4.30.0",
  "spacy>=3.5.0",
  "textblob>=0.17.0",
  "nltk>=3.8.0",
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.22.0",
  "python-multipart>=0.0.5",
  "python-dotenv>=0.21.0",
  "pydantic>=1.10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["enhanced_deforum_music_generator*", "deforum_music*"]

[project.optional-dependencies]
asr=["openai-whisper>=20230314"]
