[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edmg-studio-backend"
version = "1.1.0"
description = "Backend API for EDMG Studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.5",
  "requests>=2.31",
  "python-multipart>=0.0.9",
  "py7zr>=0.21.0",
  "Pillow>=10.0.0",
  "huggingface-hub>=0.23.0",
  "keyring>=24.3.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
audio = [
  "librosa>=0.10.2",
  "soundfile>=0.12.0",
]
asr = [
  "faster-whisper>=1.1.0",
]
core = [
  "numpy>=1.23.0",
  "scipy>=1.10.0",
  "PyYAML>=6.0.0",
  "librosa>=0.10.2",
  "soundfile>=0.12.0",
  "spacy>=3.5.0",
  "textblob>=0.17.0",
  "nltk>=3.8.0",
  "python-dotenv>=0.21.0",
]
internal = [
  "diffusers>=0.30.0",
  "transformers>=4.42.0",
  "accelerate>=0.33.0",
  "safetensors>=0.4.3",
  "torch>=2.2.0",
]
full = [
  "numpy>=1.23.0",
  "scipy>=1.10.0",
  "PyYAML>=6.0.0",
  "librosa>=0.10.2",
  "soundfile>=0.12.0",
  "faster-whisper>=1.1.0",
  "diffusers>=0.30.0",
  "transformers>=4.42.0",
  "accelerate>=0.33.0",
  "safetensors>=0.4.3",
  "torch>=2.2.0",
  "spacy>=3.5.0",
  "textblob>=0.17.0",
  "nltk>=3.8.0",
  "python-dotenv>=0.21.0",
]
studio_bundle = [
  "numpy>=1.23.0",
  "scipy>=1.10.0",
  "PyYAML>=6.0.0",
  "librosa>=0.10.2",
  "soundfile>=0.12.0",
  "faster-whisper>=1.1.0",
  "diffusers>=0.30.0",
  "transformers>=4.42.0",
  "accelerate>=0.33.0",
  "safetensors>=0.4.3",
  "torch>=2.2.0",
  "spacy>=3.5.0",
  "textblob>=0.17.0",
  "nltk>=3.8.0",
  "python-dotenv>=0.21.0",
]

[project.scripts]
edmg-studio-backend = "edmg_studio_backend.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = [
  "edmg_studio_backend*",
  "enhanced_deforum_music_generator*",
  "deforum_music*",
  "edmg*",
  "core*",
  "config*",
  "integrations*",
  "src*",
  "edmg_ai_service*",
]


[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "node_modules",
  "src/enhanced_deforum_music_generator/tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["enhanced_deforum_music_generator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
